--- a/JUDYSOFT/JUDYSOFT.csproj
+++ b/JUDYSOFT/JUDYSOFT.csproj
@@ -305,13 +305,13 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Images\guardar.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Images\1484546293_Save.ico" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Images\l.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\1484546334_Apply.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
