--- a/JUDYSOFT/JUDYSOFT.csproj
+++ b/JUDYSOFT/JUDYSOFT.csproj
@@ -73,6 +73,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DataSet2.xsd</DependentUpon>
     </Compile>
+    <Compile Include="frmNomina.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmNomina.Designer.cs">
+      <DependentUpon>frmNomina.cs</DependentUpon>
+    </Compile>
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -237,6 +243,9 @@
     <EmbeddedResource Include="frmMenuPrincipal.resx">
       <DependentUpon>frmMenuPrincipal.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmNomina.resx">
+      <DependentUpon>frmNomina.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmOpcionHab.resx">
       <DependentUpon>frmOpcionHab.cs</DependentUpon>
     </EmbeddedResource>
@@ -318,6 +327,87 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Images\1484546336_Back.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Image1.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1484546336_Back.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1484548470_Zoom.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1484548483_Edit_page.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1484548508_Pencil.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1484643760_Registration.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1484643762_Info.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1484643763_Help.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1484643767_Home.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1484643775_Preview.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1484645183_Key.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1484645201_Open-Sign.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1484910400_duration.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1484910434_17.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1484910442_City.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1485069386_compose.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1485069395_magnifyingglass.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1485069407_calendar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1485069421_clock.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1485069428_check.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1485069438_phone.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1486451260_broom.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\a.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\e.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\l.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\o.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\s.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
