--- a/JUDYSOFT/App.config
+++ b/JUDYSOFT/App.config
@@ -6,6 +6,9 @@
         <add name="JUDYSOFT.Properties.Settings.AdministracionConnectionString"
             connectionString="Data Source=LENOVO-PC\SQLEXPRESS;Initial Catalog=Administracion;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="JUDYSOFT.Properties.Settings.JUDYSOFTConnectionString"
+            connectionString="Data Source=DESKTOP-TPC97N2;Initial Catalog=JUDYSOFT;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
