--- a/JUDYSOFT/JUDYSOFT.csproj
+++ b/JUDYSOFT/JUDYSOFT.csproj
@@ -73,6 +73,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DataSet2.xsd</DependentUpon>
     </Compile>
+    <Compile Include="DataSetfac.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DataSetfac.xsd</DependentUpon>
+    </Compile>
     <Compile Include="FormConsultarCliente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -281,6 +286,17 @@
     </None>
     <None Include="DataSet2.xss">
       <DependentUpon>DataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="DataSetfac.xsc">
+      <DependentUpon>DataSetfac.xsd</DependentUpon>
+    </None>
+    <None Include="DataSetfac.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DataSetfac.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="DataSetfac.xss">
+      <DependentUpon>DataSetfac.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
